Make Astral as a dll of hub-server

--- a/AstralBot.csproj
+++ b/AstralBot.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{07285E72-F11A-4AA3-A3E7-48585DF79015}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>AstralBot</RootNamespace>
     <AssemblyName>AstralBot</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
@@ -31,6 +31,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -59,10 +62,10 @@
     <Compile Include="Bot.cs" />
     <Compile Include="BotCommands.cs" />
     <Compile Include="Configuration\BotConfig.cs" />
+    <Compile Include="Helpers\Command.cs" />
     <Compile Include="Helpers\MessageParser.cs" />
     <Compile Include="Network\GameClient.cs" />
     <Compile Include="Network\NetworkData.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
